--- a/BlogStore.BusinessLayer/BlogStore.BusinessLayer.csproj
+++ b/BlogStore.BusinessLayer/BlogStore.BusinessLayer.csproj
@@ -8,12 +8,12 @@
 
   <ItemGroup>
     <Folder Include="Logging\" />
-    <Folder Include="Container\" />
     <Folder Include="ErrorMessages\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
